# honeywatch

./: .env.example  Caddyfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.proxy.yml  docker-compose.yml
.github/: codeql-config.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
api/: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/src/: app.py  auth.py  config.py  extensions.py
api/src/models/: __init__.py  auth_attempt.py  command.py  download.py  geo_location.py  session.py
api/src/routes/: __init__.py  health.py  sessions.py
api/src/services/: sessions.py
api/tests/: conftest.py  test_health.py  test_sessions.py
cowrie/: cowrie.cfg
ingestor/: Dockerfile  pyproject.toml
ingestor/src/: config.py  main.py  parser.py  writer.py
ingestor/tests/: conftest.py  test_parser.py  test_writer.py
proxy/: nginx.conf
