[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "honeywatch-api"
version = "0.1.0"
description = "REST API for the honeywatch honeypot monitoring system"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "gunicorn>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
